--- a/app/index.html
+++ b/app/index.html
@@ -3,21 +3,28 @@
 <head>
 	<title>Hotel Management System</title>
 	<!-- vendor files-->
-	<link rel="stylesheet" type="text/css" href="../vendor/fontawesome/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/fontawesome/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 	<!-- Application files -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body ng-app="KOT" ng-controller="login">
-	<h2>{{title}}</h2>	
+<body ng-app="kot">
+	<ui-view></ui-view>
 </body>
 <!-- Vendor files -->
-<script type="text/javascript" src="../vendor/angular/angular.min.js"></script>
+<!-- <script type="text/javascript" src="../vendor/angular/angular.min.js"></script>
 <script type="text/javascript" src="../vendor/angular-local-storage/dist/angular-local-storage.min.js"></script>
 <script type="text/javascript" src="../vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="../vendor/jquery/dist/jquery.min.js"></script>
-
+ -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<script type="text/javascript" src="https://rawgit.com/grevory/angular-local-storage/master/dist/angular-local-storage.min.js"></script>
+<script type="text/javascript" src="https://rawgit.com/angular-ui/ui-router/master/release/angular-ui-router.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <!-- Application files -->
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/config/route.js"></script>
 <script type="text/javascript" src="js/controllers/login_controller.js"></script>
 </html>
